# Auth_sprint_1

./: .docker.env.example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  users.db
.github/workflows/: continuous_integration.yml
alembic/: env.py
auth_service/: Dockerfile  main.py  openapi.yml  requirements.txt  routers.py
auth_service/schema/: openapi.yaml  openapi.yml
auth_service/src/: app.py  main.py
auth_service/src/core/: admin.py  config.py  controllers.py  jwt.py  models.py  security.py  views.py
auth_service/src/database/: auth.ddl
auth_service/src/db/: datastore.py  make_migrate.py  redis.py
auth_service/src/models/: base.py  role.py  user.py
auth_service/src/utils/: config.py
auth_service/src/views/: home.py
auth_service/templates/: base.html  index.html
auth_service/templates/admin/: base.html
auth_service/templates/security/: base.html  history.html  index.html  login_user.html  profile.html  register_user.html
nginx/configs/: site.conf
tests/: .env.example  .env.test.example  Dockerfile  conftest.py  docker-compose.tests.yml  docker-compose.yml  requirements.txt  start.sh
tests/functional/: data.py  settings.py
tests/functional/src/: test_auth_service.py  test_roles.py  test_users.py
